--- a/PortLog/Dominio/Dominio.csproj
+++ b/PortLog/Dominio/Dominio.csproj
@@ -41,7 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntidadesNegocio\Cliente.cs" />
+    <Compile Include="EntidadesNegocio\Importacion.cs" />
     <Compile Include="EntidadesNegocio\Producto.cs" />
+    <Compile Include="EntidadesNegocio\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
