--- a/PortLog/MVCPortLog/Web.config
+++ b/PortLog/MVCPortLog/Web.config
@@ -56,4 +56,18 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="miConexion" connectionString="SERVER=(localDb)\MsSqlLocalDb;DATABASE=BasePortLog;INTEGRATED SECURITY=TRUE;" />
+    <!--<add name="MVCDistribuidoraContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=MVCDistribuidoraContext-20200412154657; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MVCDistribuidoraContext-20200412154657.mdf" providerName="System.Data.SqlClient" />-->
+  </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
