--- a/PortLog/MVCPortLog/Web.config
+++ b/PortLog/MVCPortLog/Web.config
@@ -58,9 +58,9 @@
   </system.codedom>
   <connectionStrings>
     <add name="miConexion" connectionString="SERVER=(localDb)\MsSqlLocalDb;DATABASE=BasePortLog;INTEGRATED SECURITY=TRUE;" />
-    <!--<add name="MVCDistribuidoraContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=MVCDistribuidoraContext-20200412154657; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MVCDistribuidoraContext-20200412154657.mdf" providerName="System.Data.SqlClient" />-->
+    <add name="MVCPortLogContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=MVCPortLogContext-20200412154657; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MVCPortLogContext-20200412154657.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <entityFramework>
+  <!--<entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
@@ -69,5 +69,5 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
-  </entityFramework>
+  </entityFramework>-->
 </configuration>
