--- a/PortLog/Repositorios/Repositorios.csproj
+++ b/PortLog/Repositorios/Repositorios.csproj
@@ -43,7 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepositorioClientes.cs" />
+    <Compile Include="RepositorioProductos.cs" />
+    <Compile Include="RepositorioUsuarios.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dominio\Dominio.csproj">
