--- a/PortLog/MVCPortLog/Web.config
+++ b/PortLog/MVCPortLog/Web.config
@@ -70,4 +70,16 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>-->
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IServicioProducto" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:63693/ServicioProducto.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServicioProducto"
+        contract="ServiceReference1.IServicioProducto" name="BasicHttpBinding_IServicioProducto" />
+    </client>
+  </system.serviceModel>
 </configuration>
