--- a/PortLog/Repositorios/Repositorios.csproj
+++ b/PortLog/Repositorios/Repositorios.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepositorioProductos.cs" />
+    <Compile Include="RepositorioProducto.cs" />
     <Compile Include="RepositorioUsuarios.cs" />
   </ItemGroup>
   <ItemGroup>
